# rag-system

./: .env.example  .gitignore  README.md  ROADMAP.md  app.py  pyproject.toml
data/pdfs/: README.md
rag_system/: __init__.py  cli.py  config.py  ocr.py  pdf_ingest.py  rerank.py  reset.py  retrieval.py  service.py  store.py  web.py
rag_system/api/: app.py  models.py
scripts/: ingest.py
